--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.goal {
+  border: solid 1px black;
+  width: 160px;
+  padding: 5px;
+  margin: 5px;
+  display: inline-block;
+}
+
+.goal-name {
+  font-weight: bold;
+  text-decoration: underline;
+}
